[package]
name = "atmega32u4-hal"
version = "0.1.1"
authors = ["Rahix <rahix@rahix.de>"]
description = "Hardware Abstraction Layer for ATmega32U4"
license = "MIT OR Apache-2.0"

documentation = "https://docs.rs/atmega32u4-hal"
repository = "https://github.com/Rahix/atmega32u4-hal"
readme = "README.md"

keywords = ["atmega", "avr", "arduino", "hal"]
categories = ["embedded", "hardware-support", "no-std"]

[features]
docs = []

[dependencies]
atmega32u4 = "0.1.3"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[package.metadata.docs.rs]
features = ["docs"]

[profile.dev]
codegen-units = 1
lto = true
incremental = false

[profile.release]
codegen-units = 1
lto = true
incremental = false
